[package]
name = "text-ed-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
crossbeam-channel = "0.5.11"
crossterm = "0.27.0"
dyn-clone = "1.0.17"
ratatui = { version = "0.26.1", features = ["serde"] }
