[package]
name = "bespoke-ed"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
crossbeam-channel = "0.5.11"
crossterm = "0.27.0"
dyn-clone = "1.0.17"
ratatui = { version = "0.26.1", features = ["serde", "unstable-widget-ref"] }
